force-app/src/objects/c2g__ConsolidationHierarchy__c.object
<CustomObject>
    <description>Stores header information for the Consolidation Hierarchy data.</description>
    <fields>
        <fullName>c2g__EndDate__c</fullName>
        <description>Indicates the end date for a consolidation hierarchy.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the consolidation hierarchy is active.</description>
        <inlineHelpText>You cannot deselect this field. If selected, you can only edit the end date field for this record.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__StartDate__c</fullName>
        <description>Indicates the start date for a consolidation hierarchy.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Consolidation Hierarchy</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__StartDate__c</columns>
        <columns>c2g__EndDate__c</columns>
        <columns>c2g__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CH-{0000000}</displayFormat>
        <label>Consolidation Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consolidation Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>